# ai-visibility-monitor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  citation_check.py  ga4_pull.py  gsc_pull.py  prereqs_sweep.py  pyproject.toml  queries.md.example  requirements.txt  sites.json.example
avm/: __init__.py  audit_prospect.py  baselines.py  citation.py  cli.py  config.py  expansion.py  ga4.py  gsc.py  interactive.py  output.py  preflight.py  prereqs.py  preset_loader.py  surfaces.py  threads.py  trend.py  wizard.py
avm/audit_modules/: __init__.py  _html.py  crawler_access.py  discovery_files.py  meta_html_quality.py  og_social.py  render_performance.py  schema_markup.py
avm/data/: baselines.json
avm/engines/: __init__.py  chatgpt.py  claude.py  perplexity.py
avm/presets/: README.md  __init__.py  work-smart-mid-market.yaml
docs/: ROADMAP.md
sample-data/: citations-example.json  ga4-example.json  gsc-example.json  prereqs-example.json
tests/: audit_prospect_test.py  baselines_test.py  model_comparison.md  surfaces_test.py  test_cli_preset.py  test_preset_loader.py  threads_test.py
